AC_INIT(avt.c)

AVT_MAJOR_VERSION=1
AVT_MINOR_VERSION=0
AVT_MICRO_VERSION=1
AVT_INTERFACE_AGE=0
AVT_BINARY_AGE=1
AVT_VERSION=$AVT_MAJOR_VERSION.$AVT_MINOR_VERSION.$AVT_MICRO_VERSION

AC_SUBST(AVT_MAJOR_VERSION)
AC_SUBST(AVT_MINOR_VERSION)
AC_SUBST(AVT_MICRO_VERSION)
AC_SUBST(AVT_INTERFACE_AGE)
AC_SUBST(AVT_BINARY_AGE)
AC_SUBST(AVT_VERSION)

# libtool versioning
LT_RELEASE=$AVT_MAJOR_VERSION.$AVT_MINOR_VERSION
LT_CURRENT=`expr $AVT_MICRO_VERSION - $AVT_INTERFACE_AGE`
LT_REVISION=$AVT_INTERFACE_AGE
LT_AGE=`expr $AVT_BINARY_AGE - $AVT_INTERFACE_AGE`
AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

# For automake.
VERSION=$AVT_VERSION
PACKAGE=avt

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)

dnl Initialize libtool
AM_PROG_LIBTOOL

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

AC_CANONICAL_HOST

AC_OUTPUT(Makefile)
